--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,45 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face {
+  font-family: 'Poppins';
+  src: url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.list-item.hovered {
+  transform: scale(1.2);
+}
+
+#logo {
+  width: 6.5vw;
+  margin-left: 4.4vw;
+}
+
+.redes {
+  opacity: 1;
+  display: inline-block;
+  transition: all 0.6s ease-in-out 0s;
+  transform-origin: top;
+  cursor: pointer;
+}
+
+.redes:hover {
+  transform: scale(1.1) translateY(-10%);
+  opacity: 0.5;
+  cursor: pointer;
+}
+
+.latas {
+  cursor: pointer;
+  display: inline-block;
+  transition: all 0.6s ease-in-out 0s;
+  transform-origin: top;
+}
+
+.latas:hover {
+  transform: scale(1.1) translateY(-10%);
+  cursor: pointer;
+}
