--- a/src/index.css
+++ b/src/index.css
@@ -53,3 +53,16 @@ code {
   transform: scale(1.1) translateY(-10%);
   cursor: pointer;
 }
+
+#but {
+  font-family: Poppins, sans-serif;
+  font-weight: 500;
+  cursor: pointer;
+  display: inline-block;
+  transition: all 0.6s ease-in-out 0s;
+  transform-origin: center center;
+}
+
+#but:hover {
+  transform: scale(1.1) translateY(-10%);
+}
